# use_spdlog

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Log/: init_spdlog.hpp
test/: CMakeLists.txt  udp_recv_log.cpp
